[package]
name = "ethock"
version = "0.1.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"

[lib]
name = "ethock_lib"
path = "src/lib.rs"

[[bin]]
name = "ethock"
path = "src/bin.rs"

[dependencies]
rouille = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-serialize = "0.3.24"