[package]
name = "ethock"
version = "0.0.3"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PumpkinSeed/ethock"
description = """
Lightweight Ethereum JSON RPC Mock written in Rust
"""
keywords = ["ethereum", "mock", "json", "rpc"]

[lib]
name = "ethock_lib"
path = "src/lib.rs"

[[bin]]
name = "ethock"
path = "src/bin.rs"

[dependencies]
rouille = "3.0.0"
serde = { version = "1.0", features = ["derive"] }