[package]
name = "ethock"
version = "0.1.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PumpkinSeed/ethock"
description = """
Lightweight Ethereum JSON RPC Mock written in Rust
"""
keywords = ["ethereum", "mock", "json", "rpc"]

[lib]
name = "ethock_lib"
path = "src/lib.rs"

[[bin]]
name = "ethock"
path = "src/bin.rs"

[dependencies]
jsonrpc-http-server = "17.0.0"
jsonrpc-core = "17.0.0"
log = "0.4"
env_logger = "0.8.2"
tokio = "1.2.0"
hyper = "0.14.4"

[dev-dependencies]
reqwest = { version = "0.11.0", features = ["blocking", "json"] }